# azul

./: .gitignore  AGENTS.md  Cargo.toml  README.md  devenv.nix
.beads/: issues.jsonl
.cargo/: config.toml
.claude/: settings.json
crates/azul-wasm/: Cargo.toml
crates/azul-wasm/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/rl-env/: Cargo.toml
crates/rl-env/benches/: feature_extractor.rs  mcts.rs  net.rs
crates/rl-env/src/: action_encoder.rs  agent.rs  alphazero_net.rs  environment.rs  feature_extractor.rs  lib.rs  mcts.rs  mlx_config.rs  profiling.rs  types.rs
crates/rl-env/src/alphazero/: examples.rs  mod.rs  replay_buffer.rs  training.rs
docs/: PROFILING.md  best.safetensors  index.html  main.js
docs/pkg/: azul_wasm.d.ts  azul_wasm_bg.wasm.d.ts
history/: alphazero-mcts.md  anti-floor.md  batched-nn.md  engine-spec.md  flamegraph_analysis.md  parallel-nn.md  profiling.md  rl-env.md  selfplay-pipeline.md
scripts/: publish-web.sh
src/: display.rs  lib.rs  main.rs
src/rl_env/: action_encoder.rs  agent.rs  environment.rs  feature_extractor.rs  types.rs
web/: index.html  main.js  main.ts  main.tsx  package.json  styles.css  tsconfig.json
web/pkg/: azul_wasm.d.ts  azul_wasm.js  azul_wasm_bg.wasm  azul_wasm_bg.wasm.d.ts
