[workspace]
members = ["crates/engine", "crates/rl-env", "crates/azul-wasm"]
resolver = "2"

[package]
name = "azul"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
profiling = ["azul-rl-env/profiling"]

[dependencies]
azul-engine = { path = "crates/engine" }
azul-rl-env = { path = "crates/rl-env" }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
mlx-rs = "0.25"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[[bin]]
name = "inspect"
path = "src/bin/inspect.rs"

[dev-dependencies]
rand = "0.9"
